--- a/test/index.html
+++ b/test/index.html
@@ -9,4 +9,18 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <style>
+    .left_menu{
+      float: left;
+      width: 20%;
+      background-color: #ffffff;
+    }
+    .right_menu{
+      float: right;
+      width: 78%;
+      background-color: #ffffff;
+      border-radius: 2px;
+      padding: 20px;
+    }
+  </style>
 </html>
