--- a/test/index.html
+++ b/test/index.html
@@ -10,15 +10,24 @@
     <!-- built files will be auto injected -->
   </body>
   <style>
-    .left_menu{
-      float: left;
-      width: 20%;
-      background-color: #ffffff;
+    *{
+      box-sizing: border-box;
     }
+    html,body{
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
+    #app{
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+    }
+
     .right_menu{
       float: right;
-      width: 78%;
-      background-color: #ffffff;
+      width: 100%;
+      /* background-color: #ffffff; */
       border-radius: 2px;
       padding: 20px;
     }
